# localAI

./: .dockerignore  Dockerfile  README.md  app.py  pyproject.toml  test.py
new src/: app.py  n.py  newapp.py
src/: __init__.py  app.py  index.html  index.php  setup.py  temp.py
src/chatlocalai.egg-info/: PKG-INFO  SOURCES.txt
src/localgpt.egg-info/: PKG-INFO  SOURCES.txt
src/nonetchat.egg-info/: PKG-INFO  SOURCES.txt
static/: styles.css
templates/: index.html
